--- a/restdos/requirements.txt
+++ b/restdos/requirements.txt
@@ -1,9 +1,19 @@
+arrow==1.1.1
 asgiref==3.4.1
+binaryornot==0.4.4
+chardet==4.0.0
+click==8.0.1
+cookiecutter==1.7.3
 Django==3.2.7
 django-allauth==0.45.0
+django-tailwind==2.2.0
+jinja2-time==0.2.0
 oauthlib==3.1.1
+poyo==0.5.0
 PyJWT==2.1.0
+python-slugify==5.0.2
 python3-openid==3.2.0
 pytz==2021.1
 requests-oauthlib==1.3.0
 sqlparse==0.4.2
+text-unidecode==1.3
