--- a/restdos/requirements.txt
+++ b/restdos/requirements.txt
@@ -4,8 +4,10 @@ binaryornot==0.4.4
 chardet==4.0.0
 click==8.0.1
 cookiecutter==1.7.3
+crispy-tailwind==0.5.0
 Django==3.2.7
 django-allauth==0.45.0
+django-crispy-forms==1.13.0
 django-tailwind==2.2.0
 jinja2-time==0.2.0
 oauthlib==3.1.1
