--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ crispy-tailwind==0.5.0
 Django==3.2.7
 django-allauth==0.45.0
 django-crispy-forms==1.13.0
+django-sms==0.5.0
 django-tailwind==2.2.0
 jinja2-time==0.2.0
 oauthlib==3.1.1
