--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 arrow==1.1.1
 asgiref==3.4.1
 binaryornot==0.4.4
+boto3==1.19.4
+botocore==1.22.4
 chardet==4.0.0
 click==8.0.1
 cookiecutter==1.7.3
@@ -10,9 +12,11 @@ Django==3.2.7
 django-allauth==0.45.0
 django-crispy-forms==1.13.0
 django-sms==0.5.0
+django-storages==1.12.2
 django-tailwind==2.2.0
 gunicorn==20.1.0
 jinja2-time==0.2.0
+jmespath==0.10.0
 oauthlib==3.1.1
 poyo==0.5.0
 psycopg2-binary==2.9.1
@@ -21,6 +25,7 @@ python-slugify==5.0.2
 python3-openid==3.2.0
 pytz==2021.1
 requests-oauthlib==1.3.0
+s3transfer==0.5.0
 sqlparse==0.4.2
 stripe==2.60.0
 text-unidecode==1.3
